# integral-enum

./: Cargo.toml  README.md
examples/: simple.rs
src/: integral.rs  lib.rs  tag.rs
