[package]
name = "integral-enum"
version = "0.1.0"
edition = "2021"

authors = ["Nero"]
repository = "https://github.com/nerodono/integral-enum"
description = "Simple way to define integer-like enums"
license = "Unlicense"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.54"
quote = "1.0.26"
syn = "2.0.11"
